added link to GitHub

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/LidijaLegzdina/Weather-app">
+      https://github.com/LidijaLegzdina/Weather-app
+    </a>
     <script src="src/index.js"></script>
   </body>
 </html>
