updated CSS formating

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="app">
+            <div class="row">
         <div class="col-4 riga">
           <p class="fs-1" id="current-city">Riga</p>
         </div>
@@ -91,8 +92,7 @@
               <div id="wind">
               Wind 2 m/s
             </div>
-            </p>
-          </div>
+                      </div>
           <div class="col-1 col-sm">
             <p class="fs-5">
               ☀️
@@ -136,9 +136,9 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/LidijaLegzdina/Weather-app">
-      https://github.com/LidijaLegzdina/Weather-app
-    </a>
-    <script src="src/index.js"></script>
+    </div>
+    <a href="https://github.com/LidijaLegzdina/Weather-app" target="blank" id="git-hub-link">
+      coded by Lidija Legzdina
+          <script src="src/index.js"></script>
   </body>
 </html>
