added weather icon

--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
             <p class="fs-5 day">Monday 12:29</p>
           </div>
         </div>
+        <div class="row" >
+          <div class="col-4">
+            <img class="fs-1" id="current-weather-icon" src="https://www.flaticon.com/free-icon/sunny_979585"/>
+                    
+                    </div>
+        </div>
         <div class="row">
           <div class="col-4 temperature">
-            <p class="fs-2" id="current-temperature">+32°C</p>
+            <p class="fs-2" id="current-temperature">+32°C |°F</p>
           </div>
-          <div class="col-1 col-sm tue fs-6">
+                    <div class="col-1 col-sm tue fs-6">
             <button type="button" class="btn btn-primary">Tue</button>
           </div>
           <div class="col-1 col-sm thu fs-6">
@@ -80,20 +86,18 @@
               <div id="feels-like-now">
               Feels like 35 °C
               </div>
-              <br />
-              <div id="description">
+                                          <div id="description">
               Sunny
             </div>
-              <br />
               <div id="precipitation">
               Precipitation 55%
             </div>
-              <br />
               <div id="wind">
               Wind 2 m/s
-            </div>
-                      </div>
-          <div class="col-1 col-sm">
+              </div>
+              </p>
+              </div>
+                      <div class="col-1 col-sm">
             <p class="fs-5">
               ☀️
               <br />
