Added Default weather forecast - Riga

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="row" >
           <div class="col-4">
-            <img class="fs-1" id="current-weather-icon" src="https://www.flaticon.com/free-icon/sunny_979585"/>
+            <img class="fs-1" id="current-weather-icon" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
                     
                     </div>
         </div>
