--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         </div>
         <div class="row">
           <div class="col-4 temperature">
-            <p class="fs-2" id="current-temperature">+32°C |°F</p>
+            <p class="fs-2" id="current-temperature">
+              +32°C 
+                        </p>
           </div>
                     <div class="col-1 col-sm tue fs-6">
             <button type="button" class="btn btn-primary">Tue</button>
@@ -86,7 +88,7 @@
               <div id="feels-like-now">
               Feels like 35 °C
               </div>
-                                          <div id="description">
+             <div id="description">
               Sunny
             </div>
               <div id="precipitation">
