Weather forecast-added days, icons, temp html CSS

--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
               +32°C 
                         </p>
           </div>
-                    <div class="col-1 col-sm tue fs-6">
-            <button type="button" class="btn btn-primary">Tue</button>
+                              <div class="col-1 col-sm tue fs-6">
+            <div class="weather-forecast-date">Tue</div>
           </div>
           <div class="col-1 col-sm thu fs-6">
-            <button type="button" class="btn btn-primary">Thu</button>
+            <div class="weather-forecast-date-2">Thu</div>
           </div>
           <div class="col-1 col-sm wed fs-6">
-            <button type="button" class="btn btn-primary">Wed</button>
+            <div class="weather-forecast-date-3">Wed</div>
           </div>
           <div class="col-1 col-sm fri fs-6">
-            <button type="button" class="btn btn-primary">Fri</button>
+            <div class="weather-forecast-date-4">Fri</div>
           </div>
           <div class="col-1 col-sm sat fs-6">
-            <button type="button" class="btn btn-primary">Sat</button>
+            <div class="weather-forecast-date-5">Sat</div>
           </div>
-        </div>
+                </div>
         <div class="row">
           <div class="col-4">
             <p class="fs-5 today">
@@ -98,47 +98,57 @@
               </div>
               </p>
               </div>
-                      <div class="col-1 col-sm">
+                                    <div class="col-1 col-sm">
             <p class="fs-5">
-              ☀️
+                <img class="fs-1" id="weather-forecast-icon" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
               <br />
               <br />
+              <div class="weather-forecast-temp">
               +31°
+            </div>
             </p>
           </div>
           <div class="col-1 col-sm">
             <p class="fs-5">
-              ☀️
+              <img class="fs-1" id="weather-forecast-icon-2" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
               <br />
               <br />
+              <div class="weather-forecast-temp-2">
               +30°
+            </div>
             </p>
           </div>
           <div class="col-1 col-sm">
             <p class="fs-5">
-              ☁️
+              <img class="fs-1" id="weather-forecast-icon-3" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
               <br />
               <br />
+              <div class="weather-forecast-temp-3">
               +26°
+            </div>
             </p>
           </div>
           <div class="col-1 col-sm">
             <p class="fs-5">
-              ☁️
+              <img class="fs-1" id="weather-forecast-icon-4" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
               <br />
               <br />
+              <div class="weather-forecast-temp-4">
               +26°
+            </div>
             </p>
           </div>
           <div class="col-1 col-sm">
             <p class="fs-5">
-              🌧️
+              <img class="fs-1" id="weather-forecast-icon-5" src="https://cdn-icons-png.flaticon.com/512/979/979585.png"/>
               <br />
               <br />
+              <div class="weather-forecast-temp-5">
               +23°
+            </div>
             </p>
           </div>
-        </div>
+                  </div>
       </div>
     </div>
     </div>
